--- a/views/m-process.ejs
+++ b/views/m-process.ejs
@@ -34,7 +34,7 @@
         </div>
         <ul class="sub-menu">
           <li><a class="link_name" href="#">Repository</a></li>
-          <li><a href="#">Processed</a></li>
+          <li><a href="/processed">Processed</a></li>
           <li><a href="/repository">Unprocessed</a></li>
         </ul>
       </li>
@@ -107,12 +107,13 @@
     <p>
         <form action="/m-process/m-exec" method="POST">
             <div class="left">
-                <p>Base Frame:</p>
+                <p>Use a Base Frame:</p>
                 <fieldset id="baseFrame">
                     <input type="radio" value="True" name="baseFrame">
                     <label for="baseFrame">True</label>
                     <input type="radio" value="False" name="baseFrame" checked>
                     <label for="baseFrame">False</label>
+                    <input type="text" id="baseName" name="baseName" value="null" placeholder="Photo Name">
                 </fieldset>
                 <br>
                 <p>Align the images using a homography:</p>
@@ -157,33 +158,36 @@
                     <input type="text" name="thr" value="0.85" placeholder="0.85" class="mytext">
                 </fieldset>
                 <br>
-                <p>Dark Frame:</p>
+                <p>Use a Dark Frame:</p>
                 <fieldset id="darkFrame">
                     <input type="radio" value="True" name="darkFrame">
                     <label for="darkFrame">True</label>
                     <input type="radio" value="False" name=darkFrame checked>
                     <label for="darkFrame">False</label>
+                    <input type="text" id="darkName" name="darkName" value="null" placeholder="Dark Frame Name">
                 </fieldset>
                 <br>
-                <p>Flat Frame:</p>
+                <p>Use a Flat Frame:</p>
                 <fieldset id="flatFrame">
                     <input type="radio" value="True" name="flatFrame">
                     <label for="flatFrame">True</label>
                     <input type="radio" value="False" name="flatFrame" checked>
                     <label for="flatFrame">False</label>
+                    <input type="text" id="flatName" name="flatName" value="null" placeholder="Flat Frame Name">
                 </fieldset>
                 <br>
-                <p>Mask Frame:</p>
+                <p>Use a Mask Frame:</p>
                 <fieldset id="maskFrame">
                     <input type="radio" value="True" name="maskFrame">
                     <label for="maskFrame">True</label>
                     <input type="radio" value="False" name="maskFrame" checked>
                     <label for="maskFrame">False</label>
+                    <input type="text" id="maskName" name="maskName" value="null" placeholder="Mask Frame Name">
                 </fieldset>
                 <br>
                 <p>Output Name:</p>
                 <fieldset id="outputName">
-                    <input type="text" name="outputName"value="My-Processed-Photo" placeholder="My-Processed-Photo">
+                    <input type="text" name="outputName" value="My-Processed-Photo" placeholder="My-Processed-Photo">
                 </fieldset>
                 <br>
                 <p>Image Format</p>
@@ -196,31 +200,39 @@
                 </fieldset>  
             </div>
             <div class="center">
-                <p>No Auto Scale:</p>
-                <fieldset id="noAutoScale">
-                    <input type="radio" value="True" name="noAutoScale">
-                    <label for="noAutoScale">True</label>
-                    <input type="radio" value="False" name="noAutoScale" checked>
-                    <label for="noAutoScale">False</label>
-                </fieldset>
-                <br>
-                <p>No Auto Bright</p>
-                <fieldset id="noAutoBright">
-                    <input type="radio" value="True" name="noAutoBright" checked>
-                    <label for="noAutoBright">True</label>
-                    <input type="radio" value="False" name="noAutoBright">
-                    <label for="noAutoBright">False</label>
-                </fieldset>
-                <br>
-                <p>Output bps</p>
-                <fieldset id="outputBPS">
-                    <input type="radio" value="8" name="outputBPS">
-                    <label for="outputBPS">8</label>
-                    <input type="radio" value="16" name="outputBPS" checked>
-                    <label for="outputBPS">16</label>
-                </fieldset>
-                <br>
-                <p>Use Camera White Balance</p>
+              <p>Gamma</p>
+              <fieldset>
+                  <select name="gamma" id="gamma">
+                      <option value="linear" selected>Linear</option>
+                      <option value="sRGB">sRGB</option>
+                  </select>
+              </fieldset> 
+              <br>
+              <p>No Auto Scale:</p>
+              <fieldset id="noAutoScale">
+                  <input type="radio" value="True" name="noAutoScale">
+                  <label for="noAutoScale">True</label>
+                  <input type="radio" value="False" name="noAutoScale" checked>
+                  <label for="noAutoScale">False</label>
+              </fieldset>
+              <br>
+              <p>No Auto Bright</p>
+              <fieldset id="noAutoBright">
+                  <input type="radio" value="True" name="noAutoBright" checked>
+                  <label for="noAutoBright">True</label>
+                  <input type="radio" value="False" name="noAutoBright">
+                  <label for="noAutoBright">False</label>
+              </fieldset>
+              <br>
+              <p>Output bps</p>
+              <fieldset id="outputBPS">
+                  <input type="radio" value="8" name="outputBPS">
+                  <label for="outputBPS">8</label>
+                  <input type="radio" value="16" name="outputBPS" checked>
+                  <label for="outputBPS">16</label>
+              </fieldset>
+              <br>
+              <p>Use Camera White Balance</p>
                 <fieldset id="cameraWB">
                     <input type="radio" value="True" name="cameraWB">
                     <label for="cameraWB">True</label>
@@ -288,6 +300,18 @@
                 <fieldset id="dcbIterations">
                     <input type="text" name="dcbIterations" value="0" placeholder="0" class="mytext">
                 </fieldset>
+                <br>
+                <p>Half Size:</p>
+                <fieldset id="halfSize">
+                    <input type="radio" value="True" name="halfSize">
+                    <label for="halfSize">True</label>
+                    <input type="radio" value="False" name="halfSize" checked>
+                    <label for="halfSize">False</label>
+                </fieldset>
+                <p>Median Filter passes:</p>
+                <fieldset id="medianFilter">
+                    <input type="text" name="medianFilter" value="0" placeholder="0" class="mytext">
+                </fieldset>
             </div>
             <div class = "right">
               <p>Choose an album:</p>
@@ -312,7 +336,46 @@
   </section>
 
   <script src="../javascripts/left_bar.js"></script>
-  
-   
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script>
+    $('input[name="baseFrame"]').click(function(e) {
+      if(e.target.value === 'True') {
+        $('#baseName').show();
+      } else {
+        $('#baseName').hide();
+      }
+    })
+    $('#baseName').hide();
+  </script>
+  <script>
+    $('input[name="darkFrame"]').click(function(e) {
+      if(e.target.value === 'True') {
+        $('#darkName').show();
+      } else {
+        $('#darkName').hide();
+      }
+    })
+    $('#darkName').hide();
+  </script>
+  <script>
+    $('input[name="flatFrame"]').click(function(e) {
+      if(e.target.value === 'True') {
+        $('#flatName').show();
+      } else {
+        $('#flatName').hide();
+      }
+    })
+    $('#flatName').hide();
+  </script>
+  <script>
+    $('input[name="maskFrame"]').click(function(e) {
+      if(e.target.value === 'True') {
+        $('#maskName').show();
+      } else {
+        $('#maskName').hide();
+      }
+    })
+    $('#maskName').hide();
+  </script>
 </body>
 </html>
